fixed compile /linking (moved freebsd specific functions to freebsd::

--- a/freebsd/src/CMakeLists.txt
+++ b/freebsd/src/CMakeLists.txt
@@ -2,6 +2,7 @@
 
 # Create the FreeBSD implementation library
 add_library(netd_freebsd STATIC
+    interface/base.cpp
     interface/bridge.cpp
     interface/epair.cpp
     interface/ethernet.cpp
