move netd_shared linking into top level cmakelist for client only

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,6 +79,7 @@ target_compile_definitions(netc PRIVATE
 target_link_libraries(netc PRIVATE
     ${LIBYANG_LIBRARIES}
     ${LIBNETCONF2_LIBRARIES}
+    netd_shared
     netd_client
     curses
 )
