improved error handling, added stack unwinding / demangler for basic debugging of exceptions, added TUI to client; netconf get-config requests in progress

--- a/shared/CMakeLists.txt
+++ b/shared/CMakeLists.txt
@@ -3,6 +3,7 @@ set(SHARED_SOURCES
     src/address.cpp
     src/exception.cpp
     src/logger.cpp
+    src/pretty.cpp
     src/route.cpp
     src/vrf.cpp
     src/yang.cpp
