--- a/shared/CMakeLists.txt
+++ b/shared/CMakeLists.txt
@@ -8,12 +8,18 @@ set(SHARED_SOURCES
     src/yang.cpp
     src/backend.cpp
     src/transport.cpp
-    src/tls.cpp
-    src/dtls.cpp
     src/unix.cpp
     src/http.cpp
     src/quic.cpp
 )
+
+# Add TLS/DTLS sources only if OpenSSL is found
+if(OPENSSL_FOUND)
+    list(APPEND SHARED_SOURCES src/tls.cpp src/dtls.cpp)
+    message(STATUS "TLS/DTLS support enabled (OpenSSL found)")
+else()
+    message(STATUS "TLS/DTLS support disabled (OpenSSL not found)")
+endif()
 
 # LLDP sources are now handled in src/lldp/ subdirectory
 
@@ -34,13 +40,29 @@ add_library(netd_shared STATIC)
 # Add sources from src directory
 target_sources(netd_shared PRIVATE ${SHARED_SOURCES})
 
-# Set include directories
-target_include_directories(netd_shared PRIVATE ${GLOBAL_INCLUDE_DIRS})
-
-# Set compile definitions
+# Set compile definitions for shared
 target_compile_definitions(netd_shared PRIVATE
     YANG_DIR="${YANG_DIR}"
+    YANG_DEV_DIR="${YANG_DEV_DIR}"
+    BUILD_ID="${BUILD_ID}"
+    GIT_REVISION="${GIT_REVISION}"
+    GIT_REVISION_LONG="${GIT_REVISION_LONG}"
+    BUILD_TYPE="${CMAKE_BUILD_TYPE}"
+    PROJECT_VERSION="${PROJECT_VERSION}"
 )
+
+# Add DEBUG_BUILD macro if build type is DEBUG
+if(CMAKE_BUILD_TYPE STREQUAL "DEBUG")
+    target_compile_definitions(netd_shared PRIVATE DEBUG_BUILD=1)
+endif()
+
+# Add LLDP-specific definitions if LLDP is found
+if(LLDP_FOUND)
+    target_compile_definitions(netd_shared PRIVATE NETD_OUI="${NETD_OUI}")
+endif()
+
+# Set include directories
+target_include_directories(netd_shared PRIVATE ${GLOBAL_INCLUDE_DIRS})
 
 # Link sub-libraries
 target_link_libraries(netd_shared PRIVATE
@@ -55,3 +77,28 @@ target_link_libraries(netd_shared PRIVATE
 if(LLDP_FOUND)
     target_link_libraries(netd_shared PRIVATE netd_shared_lldp)
 endif()
+
+# Set pkg-config variables
+set(OPENSSL_REQUIRES "")
+set(LLDP_REQUIRES "")
+
+if(OPENSSL_FOUND)
+    set(OPENSSL_REQUIRES "openssl")
+endif()
+
+if(LLDP_FOUND)
+    set(LLDP_REQUIRES "liblldpctl")
+endif()
+
+# Generate pkg-config file
+configure_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/netd-shared.pc.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/netd-shared.pc"
+    @ONLY
+)
+
+# Install pkg-config file
+install(FILES "${CMAKE_CURRENT_BINARY_DIR}/netd-shared.pc"
+    DESTINATION lib/pkgconfig
+    COMPONENT shared
+)
