some work get get the client communicating correctly with server

--- a/shared/src/netconf/CMakeLists.txt
+++ b/shared/src/netconf/CMakeLists.txt
@@ -1,8 +1,9 @@
 # Create netd_shared_netconf static library
 set(NETCONF_SOURCES
     session.cpp
-    rpc.cpp
 )
+
+add_subdirectory(rpc)
 
 add_library(netd_shared_netconf STATIC ${NETCONF_SOURCES})
 
@@ -12,4 +13,8 @@ target_include_directories(netd_shared_netconf PRIVATE ${GLOBAL_INCLUDE_DIRS})
 # Set compile definitions
 target_compile_definitions(netd_shared_netconf PRIVATE
     YANG_DIR="${YANG_DIR}"
+)
+
+target_link_libraries(netd_shared_netconf PRIVATE
+    netd_shared_netconf_rpc
 )
